настроил прокси для реакта, сделал вебкпак билд в продакшн. начал апи бейз на клиенте и поверстал чуток

--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "lint": "tslint --project ./tsconfig.json"
   },
   "devDependencies": {
